@@ -227,7 +227,7 @@ do_secure_trace(ldns_resolver *local_res, ldns_rdf *name, ldns_rr_type t,
 	if (status != LDNS_STATUS_OK) {
 		printf("ERRRRR: %s\n", ldns_get_errorstr_by_id(status));
 		ldns_rr_list_print(stdout, global_dns_root);
-		return NULL;
+		return status;
 	}
 	labels_count = ldns_dname_label_count(name);
 	if (start_name) {
